# blog-api

./: .env.example  .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/core/: database.py  security.py  settings.py
app/models/: __init__.py  comment.py  notification.py  post.py  refresh_token.py  user.py
app/repositories/: comment.py  notification.py  post.py  user.py
app/routers/: comment.py  notification.py  post.py  user.py
app/schemas/: comment.py  notification.py  post.py  user.py
app/services/: comment.py  notification.py  post.py  user.py
migrations/: env.py
migrations/versions/: 0af453174b9f_added_comment_model.py  15f3ef498ab3_added_comment_model_fix_issue_2.py  84a13376edb3_add_role_column_to_users.py  880acc01eaa8_added_device_info_for_refresh_token.py  9bda303f9ae0_added_comment_model_fix_issue.py  a7944c6deb50_added_comment_model_fix_issue_4.py  ec57a07b314c_fix_post_model_title_set_to_text.py  ef174ccd7ec0_added_comment_model.py
